-sl4j and log4j - used for logging (packaged in lib directory)

================================================================================================
Features and Changes

----------
>>>>>>>>>>>> NOTE: The old Jargon Gui, in org.sdsc.grid.gui, has been depracated, and will be removed in the release after this one <<<<<<<<<<
 
----------
Compatibility testing with IRODS2.3
* expanded unit testing coverage and interation testing

----------
Beginning a 'first order' refactoring of Jargon, with an emphasis on breaking large classes into smaller, reusable components.
*extracted Tag processing in IRODSCommands to Tag
*created IRODSAvu and extracted AVU processing from ICommands
*broke up the IRODSCommands class into IRODSCommands and IRODSConnection, working towards further refactoring

----------
Fix admin_build.xml ANT script to automatically compile with debug when running code coverage

----------
Replaced 'hand made' logging with standard logging, best practice for integrating with other frameworks, such as fedorairods
* to adjust logging, consult the log4j.properties file in src/api, defaults to ERROR, can be set to DEBUG, INFO, WARN, ERROR
* this change supercedes the prior 'debug' conventions in Jargon

----------
Culled all TODO's and dead code, did mass format of source to bring it up to current standards.

----------
Tests and resolution of Bug 32 -  copyTo when dest file is from URI results in -78000 resource not found

---------
Enhancement for  Bug 38 -  New 2.2 metadata values for queries
Work-in-progress on adding ICAT extensible metadata for queries

---------
Add a close() method to IRODSFile that will close the underlying IRODSFileSystem.  This is useful for occasions where the IRODSFile is created by a URI, 
where the IRODSFileSystem was not created in the calling code.  This was causing -4000 errors when the socket closed without a disconnect being sent.
